--- a/Learn.html
+++ b/Learn.html
@@ -13,7 +13,7 @@
     </header>
     <body>
         <h1>Learn</h1>
-        <img src="Images/Ad1.jpg" alt="Celebrity" height="500" width="auto">
+        <img src="Ad1.jpg" alt="Celebrity" height="500" width="auto">
         <p></p>
         <p>Many people choose to own a pet. One of the most common of pets to own is "man's best friend", a dog. Most of the people I know have bought a dog, however another option is to adopt one from a shelter. Many of the dogs in shelters have been through some kind of trauma and although not every dog in a shelter has been abused, abandonment can be considered as a traumatic exeprience also.</p>
         <p></p>
