--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <body>
         <h1>Adopt A Dog</h1>
-        <img src="Images/dogs.jpg" alt="puppies" height="480" width="auto">
+        <img src="dogs.jpg" alt="puppies" height="480" width="auto">
         <p>
             <a href="https://qdbr.daf.qld.gov.au/dogs">Photo</a> by Grassland Government
         </p>
