--- a/Contact.html
+++ b/Contact.html
@@ -13,7 +13,7 @@
     </header>
     <body>
         <h1>Contact</h1>
-        <img src="Images/Ad3.jpg" alt="Love" height="500" width="auto">
+        <img src="Ad3.jpg" alt="Love" height="500" width="auto">
         <p></p>
         <p>If you would like to share some love today, please call 1-800-ADOPTME</p>
         <p>Please email adoptme@gmail.com for questions on how to get started.</p>
